# AITravel

./: LICENSE  README.md
backend/: .gitignore  activities.json  django-requirement.txt.txt  flight.json  pyproject.toml  restaurants.json
backend/app/: models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/recommendation/: activities_crew.py  admin.py  agents.py  all_crews.py  flights_crew.py  models.py  restaurants_crew.py  serializers.py  tasks.py  test_json.py  urls.py  views.py
backend/recommendation/modules/: access_token.py  activities.py  flights.py  hotels.py  iata_code.py  restaurants.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ActivityCard.jsx  AuthForm.jsx  AuthForms.jsx  DestinationCard.jsx  DiningCard.jsx  InteractiveRating.jsx  LoginForm.jsx  MainCard.jsx  MainRecommendationCard.jsx  NavBar.jsx  ProfileDialog.jsx  RecommendationCard.jsx  RegisterForm.jsx
frontend/src/components/ui/: Background.jsx  SnackBar.jsx
frontend/src/core/themes/: theme.js
frontend/src/data/: destinations.json
frontend/src/pages/: AuthPage.jsx  HomePage.jsx  MainPage.jsx  NotAuthorized.jsx  ProfilePage.jsx  RecommendationDetailsPage.jsx  RecommendationsPage.jsx
frontend/src/services/: api.js
frontend/src/store/: state.js
frontent/: package-lock.json
